--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.1",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.4.0",
