--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
